nav bar completed mostly

--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -12,64 +12,87 @@
 
       <!-- Admin -->
       <li class="dropdown">
-            <a class="dropbtn">Driver Allocations</a>
-            <div class="dropdown-content">
-              <a 
-                href="#"
-                [routerLink]="['View-Allocations']"
-                [routerLinkActive]="['active']">View Allocations</a>
-            
-              <a 
-                href="#"
-                [routerLink]="['Allocate-Drivers']"
+        <a nz-dropdown [nzDropdownMenu]="menu1">
+            Driver Allocations
+            <i nz-icon nzType="down"></i>
+        </a>
+        <nz-dropdown-menu #menu1="nzDropdownMenu">
+            <a 
+            nz-menu-item 
+            class="dropdown-content"
+            href="#"
+            [routerLink]="['View-Allocations']"
+            [routerLinkActive]="['active']">View Allocations</a>
+
+            <a 
+            nz-menu-item 
+            class="dropdown-content"
+            href="#"
+            [routerLink]="['Allocate-Drivers']"
                 [routerLinkActive]="['active']"
                 >Add Allocations</a>
+        </nz-dropdown-menu>
 
-            </div>
       </li>
 
       <!-- Admin -->
       <li class="dropdown">
-        <a class="dropbtn">Manage Bins</a>
-        <div class="dropdown-content">
-          <a 
+        <a nz-dropdown [nzDropdownMenu]="menu2">
+            Manage Bins
+            <i nz-icon nzType="down"></i>
+        </a>
+        <nz-dropdown-menu #menu2="nzDropdownMenu">
+            <a 
+            nz-menu-item 
             href="#"
+            class="dropdown-content"
             [routerLink]="['Add-Bins']"
             [routerLinkActive]="['active']"
             >Add Bins</a>
         
           <a 
+            nz-menu-item 
             href="#"
+            class="dropdown-content"
             [routerLink]="['All-Bins']"
             [routerLinkActive]="['active']"
             >All Bins</a>
 
           <a 
+            nz-menu-item 
             href="#"
+            class="dropdown-content"
             [routerLink]="['Full-Bins']"
             [routerLinkActive]="['active']"
             >Reported Bins</a>
 
-        </div>
+        </nz-dropdown-menu>
        </li>
 
        <!-- Admin -->
        <li class="dropdown">
-        <a class="dropbtn">Manage Requests</a>
-        <div class="dropdown-content">
-          <a 
+        <a nz-dropdown [nzDropdownMenu]="menu3">
+            Manage Requests
+            <i nz-icon nzType="down"></i>
+        </a>
+        <nz-dropdown-menu #menu3="nzDropdownMenu">
+            <a 
+            nz-menu-item 
             href="#"
+            class="dropdown-content"
             [routerLink]="['Manage-Bin-Requests']"
             [routerLinkActive]="['active']"
             >Bin Requests</a>
         
           <a 
+            nz-menu-item 
             href="#"
+            class="dropdown-content"
             [routerLink]="['Manage-Requests']"
              [routerLinkActive]="['active']"
             >Pickup Requests</a>
 
-        </div>
+        </nz-dropdown-menu>
        </li>       
 
       <!-- Admin -->
@@ -77,8 +100,17 @@
         <a 
             [routerLink]="['Manage-Registered-Users']"
             [routerLinkActive]="['active']"
-          >Manage Reg_Users</a>
+          >Manage Reg Users</a>
       </li>
+
+      <!-- Admin -->
+      <li>
+        <a 
+            [routerLink]="['Manage-Drivers']"
+            [routerLinkActive]="['active']"
+          >Manage Drivers</a>
+      </li>
+
 
       <li>
         <a 
@@ -109,14 +141,42 @@
       </li>
 
       <li class="dropdown">
-        
-        <a class="dropbtn">Username</a>
-        <div class="dropdown-content">
-            <a (click)="logout()">Logout</a>
-        </div>
-       </li>
+       <a nz-dropdown [nzDropdownMenu]="menu">
+        Username
+        <i nz-icon nzType="down"></i>
+      </a>
+      <nz-dropdown-menu #menu="nzDropdownMenu">
+        <a nz-menu-item class="dropdown-content"(click)="logout()">Logout</a>
+      </nz-dropdown-menu>
+      </li>
+       
 
   </ul>
 <!-- </links> -->
 </header> 
 xsxs
+
+
+
+<!-- <li class="dropdown">
+    
+    <a class="dropbtn">Username</a>
+    <div class="dropdown-content">
+        <a (click)="logout()">Logout</a>
+    </div>
+</li> -->
+
+<!-- <a class="dropbtn">Driver Allocations</a>
+<div class="dropdown-content">
+    <a 
+    href="#"
+    [routerLink]="['View-Allocations']"
+    [routerLinkActive]="['active']">View Allocations</a>
+
+    <a 
+    href="#"
+    [routerLink]="['Allocate-Drivers']"
+    [routerLinkActive]="['active']"
+    >Add Allocations</a>
+
+</div> -->
