--- a/websiteWR/src/app/Shared/navbar/navbar.component.css
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.css
@@ -27,7 +27,7 @@ li a{
 	padding: 10px 15px;
 	/* text-transform: uppercase; */
 	text-align: center;
-	display: block;
+    display: block;
 }
 
 .main-nav a {
@@ -45,13 +45,10 @@ li a{
 	padding-bottom: .1em;
     background: #19324D;
 
-	/* background-color: #f4f4f4;
 	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-    border-radius: 5px; */
+
 }
 
 
@@ -84,45 +81,10 @@ li a{
 
 }
 
-
-/* .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 10px 15px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  } */
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black !important;
-    padding: 10px 15px;
-    text-decoration: none;
+.dropdown-content{
     display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+    background-color: #19324D;
+    color:white;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+}
