--- a/websiteWR/src/app/Shared/navbar/navbar.component.css
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.css
@@ -41,6 +41,9 @@ li a{
 
 
 .header {
+	position: fixed;
+	z-index: 2;
+	top: 0;
 	padding-top: .1em;
 	padding-bottom: .1em;
     background: #19324D;
