--- a/websiteWR/src/app/User-Management/reg-users/more-details-card/more-details-card.component.css
+++ b/websiteWR/src/app/User-Management/reg-users/more-details-card/more-details-card.component.css
@@ -1,6 +1,6 @@
 .font-weight-bold{
     font-weight: bold;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .title{
@@ -8,4 +8,26 @@
     margin: 0px;
     color:#19324D;
     text-align: center !important;
+}
+
+.binBox{
+    max-height: 200px;
+    overflow-y: auto; 
+    overflow-x: hidden;
+}
+
+
+.card{
+    border-bottom: solid green;
+    height: 60px;
+    margin-bottom: 10px;
+    background-color: #f9f9fa;
+    
+}
+
+.buttonBox{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
 }
