more details completed

--- a/websiteWR/src/app/User-Management/reg-users/more-details-card/more-details-card.component.html
+++ b/websiteWR/src/app/User-Management/reg-users/more-details-card/more-details-card.component.html
@@ -38,15 +38,15 @@
                 *ngIf="moreDetailsUser.status=='archived'"
                 style="background-color: #2D8F3F; color: #fff;"
                 nzShape="round"  
-                (click)="handleStatusChange()" 
+                (click)="handleStatusChange(moreDetailsUser.phoneno, 'approved')" 
                 [nzLoading]="isLoading">Unarchive this user</button>
 
             <button nz-button
-            *ngIf="moreDetailsUser.status!='archived'"
-            style="background-color: #2D8F3F; color: #fff;"
-            nzShape="round"  
-            (click)="handleStatusChange()" 
-            [nzLoading]="isLoading">Archive this user</button>
+                *ngIf="moreDetailsUser.status!='archived'"
+                style="background-color: #2D8F3F; color: #fff;"
+                nzShape="round"  
+                (click)="handleStatusChange(moreDetailsUser.phoneno, 'archived')" 
+                [nzLoading]="isLoading">Archive this user</button>
         </div>
 
     </ng-template>
