--- a/websiteWR/src/app/User-Management/reg-users/reg-users.component.html
+++ b/websiteWR/src/app/User-Management/reg-users/reg-users.component.html
@@ -69,7 +69,13 @@
     
       <ngx-datatable-column name="Approve">
         <ng-template let-row="row" ngx-datatable-cell-template>
-            <button *ngIf="row.status=='pending'" nz-button  [nzSize]="size" nzShape="circle" style="background-color: #2D8F3F; color: #fff;"><i nz-icon nzType="check"></i></button>
+            <button 
+            *ngIf="row.status=='pending'" 
+            nz-button  
+            [nzSize]="size" 
+            nzShape="circle" 
+            (click)="handleApproval(row.phoneno)"
+            style="background-color: #2D8F3F; color: #fff;"><i nz-icon nzType="check"></i></button>
             <button *ngIf="row.status!='pending'" nz-button  [nzSize]="size" nzShape="circle" [disabled]="true"><i nz-icon nzType="check"></i></button>
         </ng-template>
       </ngx-datatable-column>
