main pikcup request

--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -80,7 +80,7 @@
             nz-menu-item 
             href="#"
             class="dropdown-content"
-            [routerLink]="['Manage-Bin-Requests']"
+            [routerLink]="['Request-Management/Bins']"
             [routerLinkActive]="['active']"
             >Bin Requests</a>
         
@@ -88,7 +88,7 @@
             nz-menu-item 
             href="#"
             class="dropdown-content"
-            [routerLink]="['Manage-Requests']"
+            [routerLink]="['Request-Management/Pickups']"
              [routerLinkActive]="['active']"
             >Pickup Requests</a>
 
