--- a/websiteWR/src/app/Request-Management/bin-requests/bin-requests.component.html
+++ b/websiteWR/src/app/Request-Management/bin-requests/bin-requests.component.html
@@ -88,7 +88,8 @@
       <ngx-datatable-column name="Location">
         <ng-template let-row="row" ngx-datatable-cell-template>
             <button nz-button  
-              nzShape="circle" 
+              nzShape="circle"
+              (click)="openMap(row.lat, row.lng)" 
               style="background-color: #19324D; color: #fff;"
               ><i nz-icon nzType="fullscreen"></i></button>
         </ng-template>
@@ -127,6 +128,33 @@
       </ngx-datatable-column>
         
     </ngx-datatable>
+
+    <!-- <app-map-modal
+     [showMapModal]="showMapModal"
+     [toggleMapModal]="toggleMapModal"
+     [latitude]="selectedLatitude"
+     [longitude]="selectedLongitude">
+     
+    </app-map-modal> -->
+
+    <nz-modal
+    [(nzVisible)]="showMapModal"
+    [nzTitle]="modalTitle"
+    [nzContent]="modalContent"
+    [nzFooter]="null"
+    (nzOnCancel)="toggleMapModal()"
+    >
+    <ng-template #modalTitle>
+        <div style="text-align: center;"> 
+            <h3>Location to place bin</h3>
+        </div>
+    </ng-template>
+
+    <ng-template #modalContent >
+      <!-- <div id="mapbox" style="width: 40vw; height: 50vh"></div> -->
+      <app-map-modal></app-map-modal>
+    </ng-template>
+    </nz-modal>
 
 </div>
 
