added price card

--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -121,7 +121,7 @@
 
       <li>
         <a
-          [routerLink]="['Our-Prices']"
+          [routerLink]="['General/Prices']"
           [routerLinkActive]="['active']"
         >Prices</a>
       </li>
