--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -114,7 +114,7 @@
 
       <li>
         <a 
-        [routerLink]="['All-Bins']"
+        [routerLink]="['General/Bins']"
         [routerLinkActive]="['active']"
         >All Bins</a>
       </li>
